# Fantasy-League-AI-Helpoer

./: .gitignore  README.md  credentials.example.json  main.py  pyproject.toml
src/: __init__.py
src/advisor/: __init__.py  advisor_service.py  config.py  models.py  prompt_builder.py
src/advisor/clients/: __init__.py  base.py  espn.py  fantasypros.py  sleeper.py  weather.py
